Make table sortable

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -19,3 +19,15 @@
 .TableContainer {
   overflow-x: auto;
 }
+
+img {
+  max-width: 200px;
+}
+
+main {
+  padding: 50px;
+}
+
+th {
+  cursor: pointer;
+}
